Fix issues with "Public" boolean labels one too close to the other

--- a/static/style.css
+++ b/static/style.css
@@ -27,3 +27,5 @@ h1 {
 
 /* Fix collapsible boxes */
 .collapse { margin-right: -1em; }
+
+.rblabel {margin-right: 1em;}
